--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,21 @@
+@media (min-width: 1028px) {
+  .card {
+    border-radius: 20px;
+    transition: all 0.3s;
+  }
+  .card2 {
+    background-color: none;
+    border-radius: 10px;
+    transition: all 0.2s;
+  }
+  .card2:hover {
+    transform: scale(0.98);
+    border-radius: 20px;
+  }
+  .card:hover {
+    box-shadow: 0px 0px 30px 1px rgba(0, 255, 117, 0.3);
+  }
+}
 .fondo_negro {
   background-color: black;
 }
@@ -38,8 +56,8 @@ footer {
 }
 
 .div_inst_tw {
-  width: 20px;
-  height: 20px;
+  width: 30px;
+  height: 30px;
   margin-right: 20px;
   margin-top: 10px;
 }
@@ -55,6 +73,77 @@ p {
   text-align: left;
   text-decoration: underline yellow;
   margin: 10px 0px 10px 10px;
+}
+
+.imagen_carousel {
+  margin: 20px 0px 10px 0px;
+  width: 1116px;
+  height: 730px;
+}
+
+.color_fondo {
+  background-color: blueviolet;
+  margin: 10px 0px 20px 0px;
+}
+
+.color_texto {
+  color: blueviolet;
+}
+
+.borde_card {
+  color: blueviolet;
+  margin: 10px 0px 20px 0px;
+}
+
+.color_fondo_contacto {
+  background-color: blueviolet;
+}
+
+.posicion_formulario {
+  margin-top: 15%;
+  margin-bottom: 100px;
+}
+
+.posicion_formulario1 {
+  margin-top: 15px;
+}
+
+.posicion_formulario2 {
+  margin-top: 15px;
+  margin-bottom: 230px;
+}
+
+@media (min-width: 768px) {
+  .img_8 {
+    width: 360px;
+    height: 201.85px;
+    border-radius: 10px;
+    margin-left: 5px;
+    margin-top: 10px;
+  }
+  .img_8_izq {
+    width: 360px;
+    height: 201.85px;
+    border-radius: 10px;
+    margin-right: 5px;
+    margin-top: 10px;
+  }
+  .img_8_ult {
+    width: 360px;
+    height: 201.85px;
+    border-radius: 10px;
+    margin-right: 5px;
+    margin-top: 10px;
+  }
+}
+@media (min-width: 1028px) {
+  .img_8_ult {
+    width: 1140px;
+    height: 611.045px;
+    border-radius: 10px;
+    margin-right: 5px;
+    margin-top: 10px;
+  }
 }
 
 /*# sourceMappingURL=estilo.css.map */
