se agrego title, description y keywords a las paginas

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -102,6 +102,10 @@ p {
   border-color: blueviolet;
 }
 
+.color_texto {
+  color: blueviolet;
+}
+
 .color_fondo_contacto {
   background-color: blueviolet;
 }
