--- a/sass/_globales.scss
+++ b/sass/_globales.scss
@@ -72,6 +72,9 @@ p{
         border-color: $color;
     }
 }
+.color_texto{
+    color:blueviolet
+}
 //CONTACTO//
 .color_fondo_contacto{
     background-color: blueviolet;
